# hasktorch-skeleton

./: .gitignore  README.md  hasktorch-skeleton.cabal  shell.nix
nix/: shell.nix
src/: Main.hs  Plot.hs  SincData.hs  mnist-cnn.hs  regression.hs  xor-mlp.hs
