cabal-version:       2.2
name:                hasktorch-skeleton
version:             0.0.0.0
license:             MIT
build-type:          Simple

common config
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && < 5
                   , hasktorch >= 0.2 && < 0.3
                   , pipes
                   , mtl
                   , libtorch-ffi
                   , safe-exceptions

executable xor-mlp
  import:            config
  main-is:           xor-mlp.hs

executable regression
  import:            config
  main-is:           regression.hs

executable mnist-cnn
  import:            config
  main-is:           mnist-cnn.hs
  other-modules:     Common

