cabal-version:       2.1
name:                hasktorch-skeleton
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md

executable sinc
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     SincData
  default-language:  Haskell2010

  ghc-options:       -Wall -O2

  default-extensions:  OverloadedStrings

  build-depends:     base >= 4.7 && < 5
                   , hasktorch >= 0.2 && < 0.3
                   , hvega
                   , mtl
                   , normaldistribution
                   , random
                   , transformers
                   , text

